--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-ENJAM2019_WwiseProject/ENJAM2019_WwiseProject.ELE5d5ab19ee5329.validationcache
+ENJAM2019_WwiseProject/
