--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ sysinfo.txt
 *.apk
 *.unitypackage
 .ENJAM2019_WwiseProject/
+ENJAM2019_WwiseProject/ENJAM2019_WwiseProject.ELE5d5ab19ee5329.validationcache
