--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
-ENJAM2019_WwiseProject*
+
 
 # Visual Studio cache directory
 .vs/
@@ -35,5 +35,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-.ENJAM2019_WwiseProject/
-ENJAM2019_WwiseProject/ENJAM2019_WwiseProject.ELE5d5ab19ee5329.validationcache
+ENJAM2019_WwiseProject/*
