--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+ENJAM2019_WwiseProject/
 Assets/AssetStoreTools*
 
 
@@ -35,4 +36,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-*/ENJAM2019_WwiseProject/*
+
